[gd_scene load_steps=96 format=3 uid="uid://cc8hjpk4p2yx7"]

[ext_resource type="Texture2D" uid="uid://bm0m5w1dstb5a" path="res://assets/sprites/entities/enemies/bat/Bat-IdleFly.png" id="1_p0hut"]
[ext_resource type="Script" uid="uid://6gabuqunp5hr" path="res://src/actors/enemies/bat/bat.gd" id="1_qt1fd"]
[ext_resource type="Texture2D" uid="uid://d0o5ykvol8jai" path="res://assets/sprites/entities/enemies/bat/Bat-Attack1.png" id="2_famla"]
[ext_resource type="Texture2D" uid="uid://c6jqo0osuh63m" path="res://assets/sprites/entities/enemies/bat/Bat-WakeUp.png" id="2_q3gx4"]
[ext_resource type="Texture2D" uid="uid://csdakid7boepc" path="res://assets/sprites/entities/enemies/bat/Bat-Hurt.png" id="2_weqtw"]
[ext_resource type="Texture2D" uid="uid://d0360jg3f2t78" path="res://assets/sprites/entities/enemies/bat/Bat-Run.png" id="3_g00nq"]
[ext_resource type="Shader" uid="uid://cgycaixyakajw" path="res://src/shaders/hit_flash.tres" id="3_jrggf"]
[ext_resource type="Texture2D" uid="uid://dag6lrk0nf1db" path="res://assets/sprites/entities/enemies/bat/Bat-Attack2.png" id="3_qt1fd"]
[ext_resource type="Texture2D" uid="uid://ooha02pf2xck" path="res://assets/sprites/entities/enemies/bat/Bat-Die.png" id="4_c5sj0"]
[ext_resource type="Texture2D" uid="uid://dtqv6aps05w7j" path="res://assets/sprites/entities/enemies/bat/Bat-Sleep.png" id="5_5udcu"]
[ext_resource type="PackedScene" uid="uid://bivderlem0rfr" path="res://src/actors/enemies/_controllers/enemy_stats.tscn" id="11_c5sj0"]
[ext_resource type="PackedScene" uid="uid://rtxpfrnud2ta" path="res://src/actors/enemies/_controllers/wander_controller.tscn" id="11_ykyxn"]
[ext_resource type="PackedScene" uid="uid://crghd6gyb71w5" path="res://src/actors/enemies/_controllers/detection_zone.tscn" id="12_cww7r"]
[ext_resource type="PackedScene" uid="uid://ciaj2edwf0e0c" path="res://src/actors/enemies/_controllers/enemy_control_ui.tscn" id="12_ykyxn"]
[ext_resource type="PackedScene" uid="uid://bw7gs5y32rs22" path="res://src/actors/enemies/_controllers/enemy_hurtbox.tscn" id="14_yvpm3"]
[ext_resource type="PackedScene" uid="uid://qcy4stxecqnd" path="res://src/ui/float_damage_control.tscn" id="15_4siq7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8os3d"]
shader = ExtResource("3_jrggf")
shader_parameter/BooleanParameter = false
shader_parameter/hint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcdqn"]
atlas = ExtResource("3_qt1fd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5en8"]
atlas = ExtResource("3_qt1fd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpbsg"]
atlas = ExtResource("3_qt1fd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioei0"]
atlas = ExtResource("3_qt1fd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls5qk"]
atlas = ExtResource("3_qt1fd")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij0h4"]
atlas = ExtResource("3_qt1fd")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k65bh"]
atlas = ExtResource("3_qt1fd")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtpck"]
atlas = ExtResource("3_qt1fd")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3tua"]
atlas = ExtResource("3_qt1fd")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eugc"]
atlas = ExtResource("3_qt1fd")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3o1q"]
atlas = ExtResource("3_qt1fd")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2sjb"]
atlas = ExtResource("2_famla")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jas6"]
atlas = ExtResource("2_famla")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0hk"]
atlas = ExtResource("2_famla")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3py30"]
atlas = ExtResource("2_famla")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhr6y"]
atlas = ExtResource("2_famla")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p05a"]
atlas = ExtResource("2_famla")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwy4l"]
atlas = ExtResource("2_famla")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq6xv"]
atlas = ExtResource("2_famla")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwbjy"]
atlas = ExtResource("2_q3gx4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_73sgl"]
atlas = ExtResource("2_q3gx4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8ah2"]
atlas = ExtResource("2_q3gx4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6dr1"]
atlas = ExtResource("2_q3gx4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exc85"]
atlas = ExtResource("2_q3gx4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47j4k"]
atlas = ExtResource("2_q3gx4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v5th"]
atlas = ExtResource("2_q3gx4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey3id"]
atlas = ExtResource("2_q3gx4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ji8"]
atlas = ExtResource("2_q3gx4")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijpey"]
atlas = ExtResource("2_q3gx4")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_886fn"]
atlas = ExtResource("2_q3gx4")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufjx4"]
atlas = ExtResource("2_q3gx4")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ar72"]
atlas = ExtResource("2_q3gx4")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d382"]
atlas = ExtResource("2_q3gx4")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd0my"]
atlas = ExtResource("2_q3gx4")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kixya"]
atlas = ExtResource("2_q3gx4")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66xt4"]
atlas = ExtResource("4_c5sj0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4el8l"]
atlas = ExtResource("4_c5sj0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_un26s"]
atlas = ExtResource("4_c5sj0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh0ke"]
atlas = ExtResource("4_c5sj0")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qifx0"]
atlas = ExtResource("4_c5sj0")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_enwjc"]
atlas = ExtResource("4_c5sj0")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0pmm"]
atlas = ExtResource("4_c5sj0")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4kg4"]
atlas = ExtResource("4_c5sj0")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdn55"]
atlas = ExtResource("4_c5sj0")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk4p0"]
atlas = ExtResource("4_c5sj0")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvdmu"]
atlas = ExtResource("4_c5sj0")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms77f"]
atlas = ExtResource("4_c5sj0")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ovcs"]
atlas = ExtResource("2_weqtw")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b63w"]
atlas = ExtResource("2_weqtw")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxnxp"]
atlas = ExtResource("2_weqtw")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rof"]
atlas = ExtResource("2_weqtw")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfktg"]
atlas = ExtResource("2_weqtw")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsn2x"]
atlas = ExtResource("1_p0hut")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vidx2"]
atlas = ExtResource("1_p0hut")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahpav"]
atlas = ExtResource("1_p0hut")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g00nq"]
atlas = ExtResource("1_p0hut")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_weqtw"]
atlas = ExtResource("1_p0hut")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5udcu"]
atlas = ExtResource("1_p0hut")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3gx4"]
atlas = ExtResource("1_p0hut")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_famla"]
atlas = ExtResource("1_p0hut")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1fd"]
atlas = ExtResource("1_p0hut")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5sj0"]
atlas = ExtResource("3_g00nq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykyxn"]
atlas = ExtResource("3_g00nq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cww7r"]
atlas = ExtResource("3_g00nq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvpm3"]
atlas = ExtResource("3_g00nq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4siq7"]
atlas = ExtResource("3_g00nq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jddeo"]
atlas = ExtResource("3_g00nq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqcn5"]
atlas = ExtResource("3_g00nq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0apf"]
atlas = ExtResource("3_g00nq")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0ht7"]
atlas = ExtResource("5_5udcu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry2p3"]
atlas = ExtResource("5_5udcu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8rrj"]
atlas = ExtResource("5_5udcu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5sj0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcdqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5en8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpbsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioei0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls5qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij0h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k65bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtpck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3tua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eugc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3o1q")
}],
"loop": false,
"name": &"attack_bite",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2sjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jas6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3py30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhr6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p05a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwy4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq6xv")
}],
"loop": false,
"name": &"attack_slash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwbjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73sgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8ah2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6dr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exc85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47j4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v5th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey3id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7ji8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijpey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_886fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufjx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ar72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d382")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd0my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kixya")
}],
"loop": false,
"name": &"awaking",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66xt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4el8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un26s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh0ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qifx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enwjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0pmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4kg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdn55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk4p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvdmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms77f")
}],
"loop": false,
"name": &"dying",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ovcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b63w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxnxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfktg")
}],
"loop": false,
"name": &"hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsn2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vidx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahpav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g00nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weqtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5udcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3gx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_famla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1fd")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5sj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykyxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cww7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvpm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4siq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jddeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqcn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0apf")
}],
"loop": true,
"name": &"moving",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0ht7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry2p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8rrj")
}],
"loop": true,
"name": &"sleeping",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_p0hut"]
radius = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5sj0"]
size = Vector2(96, 64)

[sub_resource type="Animation" id="Animation_tqihg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_olv3m"]
resource_name = "hit_flash"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.110188, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2j1b"]
_data = {
&"RESET": SubResource("Animation_tqihg"),
&"hit_flash": SubResource("Animation_olv3m")
}

[node name="Bat" type="CharacterBody2D" groups=["enemies"]]
z_index = 1
collision_layer = 16
collision_mask = 34
motion_mode = 1
platform_floor_layers = 4294901762
script = ExtResource("1_qt1fd")
min_flight_height = 70.0
attack_cooldown = 1.0
attack_names = Array[String](["attack_bite", "attack_slash"])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8os3d")
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_c5sj0")
animation = &"attack_bite"
frame = 10
frame_progress = 1.0
flip_h = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p0hut")
metadata/_edit_lock_ = true

[node name="EnemyStats" parent="." instance=ExtResource("11_c5sj0")]
entity_name = "Dark Bat"
base_min_damage = 10.0
base_max_damage = 20.0
base_experience = 50.0
base_poison_chance = 20.0
base_poison_duration = 5.0
base_poison_damage = 0.5
base_move_speed = 65.0

[node name="WanderController" parent="." instance=ExtResource("11_ykyxn")]
wander_range = Vector2(300, 50)

[node name="DetectionZone" parent="." instance=ExtResource("12_cww7r")]
radius_range = 500.0

[node name="EnemyHitbox" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 1024
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_c5sj0")
debug_color = Color(0.724805, 0, 0.0693719, 0.42)

[node name="EnemyHurtbox" parent="." instance=ExtResource("14_yvpm3")]
radius = 25.0
height = 50.0

[node name="EnemyControlUI" parent="." node_paths=PackedStringArray("enemy_stats") instance=ExtResource("12_ykyxn")]
offset_top = -56.0
offset_bottom = -56.0
grow_horizontal = 1
grow_vertical = 1
enemy_stats = NodePath("../EnemyStats")

[node name="FloatDamageControl" parent="." instance=ExtResource("15_4siq7")]
offset_top = -96.0
offset_bottom = -96.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_left = -96.0
offset_top = -192.0
offset_right = -51.0
offset_bottom = -169.0
text = "State:"

[node name="HitFlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j2j1b")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="trigged_dead" from="EnemyStats" to="." method="_on_enemy_stats_trigged_dead"]
[connection signal="trigger_player_entered" from="DetectionZone" to="." method="_on_target_player_entered"]
[connection signal="trigger_player_exited" from="DetectionZone" to="." method="_on_target_player_exited"]
[connection signal="player_hitbox_entered" from="EnemyHurtbox" to="." method="_on_player_hitbox_area_entered"]
